<resources>
    <string name="app_name">亚普达EMS系统</string>
    <string name="pref_setting_customize">Language setting</string>
    <string name="app_language_pref_key" translatable="false">app_language_pref_key</string>
    <string name="pref_language_label">Language</string>
    <string name="dialog_cancel">Cancel</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>简体中文</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>zh</item>
    </string-array>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="test">Function test</string>
    <string name="ok_notifyTitle">Information</string>
    <string name="ok_notifyMsg">Lack of necessary permissions\n\nPlease click\"Setting\"-\"Permission\"-Authorize。</string>
    <string name="ok_setting">Setting</string>
    <string name="ok_sure">Determine</string>
    <string name="ok_cancel">Cancel</string>
    <string name="usb_baud_rate_error">Baud rate initialization failure</string>
    <string name="usb_drive_error">USB Driver initialization failure</string>
    <string name="usb_overtime">Out of time</string>
    <string name="usb_open_lock_success">Unlock successfully</string>
    <string name="usb_open_lock_error">Unlock failure</string>
    <string name="usb_open_dev_success">Power on successfully</string>
    <string name="usb_open_dev_error">Power on failure</string>
    <string name="usb_close_dev_success">Power off successfully</string>
    <string name="usb_close_dev_error">Power off failure</string>
    <string name="usb_close_dev_query_success">Query successfully</string>
    <string name="usb_close_dev_query_error">Query failure</string>
    <string name="net_load">Loading...</string>
    <string name="net_error">Network unavailability</string>
    <string name="net_not_data">getting information failure</string>
    <string name="net_error_1">Server connection failed</string>
    <string name="net_error_2">Data parsing failure</string>
    <string name="usb_open_lock_overtime">Unlock timeout: </string>
    <string name="usb_open_lock_fail">Unlock failure: </string>
    <string name="usb_open_lock">...Unlocking</string>
    <string name="not_register">The device is not registered</string>
    <string name="not_login">The device is not logged in</string>
    <string name="login_tip_a">Company ID cannot be empty</string>
    <string name="login_tip_b">Logon account number cannot be empty</string>
    <string name="login_tip_c">Account password cannot be empty</string>
    <string name="login_tip_d">Device ID cannot be empty</string>
    <string name="login_tip_e">Can not get device ID</string>
    <string name="login_tip_f">Can not get device type</string>
    <string name="tips_a">Verifying...</string>
    <string name="tips_b">Duplicated parcel number,please check!</string>
    <string name="tips_is_null">It\'s empty</string>
    <string name="tips_input_numbel">Please enter the quantity</string>
    <string name="tips_input_barno_tel">Please enter parcel number and phone number</string>
    <string name="tips_input_barno">Please enter parcel number!</string>
    <string name="tips_input_tel">Please enter phone number</string>
    <string name="tips_input_company">Please enter Company number</string>
    <string name="tips_input_user">Please enter Account number</string>
    <string name="tips_input_password">Please enter Password</string>
    <string name="scanning_cabinet_number">Please scan cabinet ID：</string>
    <string name="scanning_tips_a">Please scan cabinet ID first</string>
    <string name="scanning_exception">Scanned wrong information</string>
    <string name="scanning_exception_tip">Please scan right parcel number and lock number</string>
    <string name="scanning_error">Not recognized the bar code / phone number</string>
    <string name="net_tip_request">Network requesting</string>
    <string name="net_tip_back_1">The server returns empty information</string>
    <string name="net_tip_back_2">Failed to analyze returned message</string>
    <string name="net_tip_back_3">Download completed</string>
    <string name="net_tip_back_4">Failed to request from server</string>
    <string name="net_tip_exception">Data parsing error</string>
    <string name="net_tip_type_0_error_1">Failed to get the company\'s service address 1</string>
    <string name="net_tip_type_0_error_2">Failed to get the company\'s service address 2</string>
    <string name="net_tip_type_1_error_0">Login failed: </string>
    <string name="net_tip_type_1_error_1">Login failed 1: </string>
    <string name="net_tip_type_1_error_2">Login failed 2: The returned parameter is null</string>
    <string name="net_tip_type_1_success">Login successful</string>
    <string name="net_tip_type_2_error_1">Registration service returns abnormality</string>
    <string name="net_tip_type_2_error_2">Registration failed:</string>
    <string name="net_tip_type_2_success">Successful registration</string>
    <string name="net_tip_type_3_error_1">Error message returned when getting a list of lockers</string>
    <string name="net_tip_type_3_error_2">Failed to get the list of lockers</string>
    <string name="net_tip_type_3_error_3">The list of lockers is empty</string>
    <string name="net_tip_type_3_error_4">Please select the lattices</string>
    <string name="net_tip_type_3_error_5">Please select the group</string>
    <string name="net_tip_type_3_error_6">Available lattices</string>
    <string name="net_tip_type_3_error_7">No available shelf space</string>
    <string name="net_tip_type_4_error_1">Submit abnormally</string>
    <string name="net_tip_type_4_error_2">Submit failed：</string>
    <string name="net_tip_type_4_success">Submit successfully</string>
    <string name="net_tip_type_5_error_1">Request server abnormally</string>
    <string name="net_tip_type_5_error_2">Collecting Parcel failed:</string>
    <string name="net_tip_type_5_error_3">Number of parcel stored is 0</string>
    <string name="net_tip_type_5_success">Verification success</string>
    <string name="dialog_item_cargo_number">Lock number</string>
    <string name="dialog_item_odd_numbers">Parcel number</string>
    <string name="dialog_item_tel">Phone</string>
    <string name="dialog_item_open_lock"> Unlock</string>
    <string name="dialog_item_delete">Delete</string>
    <string name="dialog_item_post">Submit</string>
    <string name="dialog_item_verification_code_fetch">Pick up with Verification code</string>
    <string name="dialog_all_open">Open all lockers</string>
    <string name="dialog_distribution">Distribution</string>
    <string name="dialog_item_list_of_available_lattices">Lockers available</string>
    <string name="dialog_item_start_distribution">Start distribution</string>
    <string name="dialog_item_distribution_scan">Scan for distribution</string>
    <string name="dialog_item_remove">Move</string>
    <string name="dialog_item_deposit">Store</string>
    <string name="dialog_item_simulated_scanning_test">Simulated scanning test</string>
    <string name="dialog_item_submission">Submit</string>
    <string name="dialog_item_equipment_registration">Register device</string>
    <string name="dialog_item_company">Company ID</string>
    <string name="dialog_item_devno">Device ID</string>
    <string name="dialog_item_dev_administration">Device management</string>
    <string name="dialog_item_dev_register">Register device</string>
    <string name="dialog_item_dev_register_new">Register device again</string>
    <string name="dialog_item_dev_updata">Change type</string>
    <string name="dialog_item_register">Register</string>
    <string name="dialog_item_user_login">User login</string>
    <string name="dialog_item_user_name">User ID</string>
    <string name="dialog_item_user_password">Password</string>
    <string name="dialog_item_login">Login</string>
    <string name="dialog_item_password_login">Login with password</string>
    <string name="dialog_item_pay_by_card_login">Login with smartcard</string>
    <string name="dialog_item_pay_by_tel">Mobile phone verification</string>
    <string name="dialog_item_pay_by_weixin">Wechat QR code</string>
    <string name="dialog_item_please_brush_your_cards">Please swipe your smartcard</string>
    <string name="dialog_item_version_update">Version update</string>
    <string name="dialog_item_a_new_version_of_the_test">Check for new version</string>
    <string name="dialog_item_click_update">Click to upgrade</string>
    <string name="dialog_item_start_installation">Start Installation</string>
    <string name="dialog_item_specifications">Specifications：</string>
    <string name="dialog_item_price">Price：</string>
    <string name="dialog_item_number">Quantity：</string>
    <string name="dialog_item_pay_by_card_fetch">Swipe your smartcard to collect your parcel</string>
    <string name="dialog_item_pay_by_card_fetch_list">List of parcels</string>
    <string name="dialog_item_qr_code_in">List of parcels</string>
    <string name="dialog_item_verification_code_fetch_qr_code_in">Scan to store</string>
    <string name="dialog_item_verification_code_fetch_qr_code">Verfication code/scan to collect</string>
    <string name="dialog_item_exit">Quit the procedure</string>
    <string name="dialog_item_start"> Auto-start (Check if SmartPost program is on )</string>
    <string name="system_depotna">Device location</string>
    <string name="system_fixno">Device ID</string>
    <string name="system_libno">Position code</string>
    <string name="back">Back</string>
    <string name="input_tel">Please enter the cell phone number</string>
    <string name="input_verification">Please enter the verification code</string>
    <string name="send">Send</string>
    <string name="tts_open">Opening speech prompt</string>
    <string name="boardno_id">Board number</string>
    <string name="lockno_id">Lock number</string>
    <string name="open_electricity">Open electricity</string>
    <string name="turn_off_electricity">Turn off electricity</string>
    <string name="query_state">query state</string>
    <string name="query_all_state">query all state</string>
    <string name="all_unlocked">All unlocked</string>
    <string name="handle">Loading</string>
    <string name="open_electricity_timeout">Open electricity timeout</string>
    <string name="open_electricity_back">Open electricity back</string>
    <string name="open_electricity_write_failure">Open electricity Write failure</string>
    <string name="close_electricity_timeout">Close electricity timeout</string>
    <string name="close_electricity_back">Closeelectricity back</string>
    <string name="close_electricity_write_failure">Close electricity Write failure</string>
    <string name="query_timeout">Query Timeout</string>
    <string name="query_failure">Query Failure</string>
    <string name="query_success">Query Success</string>
    <string name="query_success_open">Query Success : Open</string>
    <string name="query_success_close">Query Success : Close</string>
    <string name="query_write_write_failure">Query Write Failure</string>
    <string name="all_unlocked_write_failure">All Unlocked Write Failure</string>
    <string name="all_unlocked_write_success">All Unlocked Write Success</string>
    <string name="payment_success">Payment success</string>
    <string name="Please_sweep_code_payment">Please sweep the two-dimensional code payment.</string>
    <string name="amount_of_money">Amount of Money</string>
    <string name="camera_resolution">Camera resolution</string>
    <string name="Serial_port_setup">Serial port setup</string>
</resources>