<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_titile" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:text="@string/dialog_item_dev_administration"
            android:textColor="@color/md_red_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="56dp"
            android:paddingRight="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_item_dev_register"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

                <View
                    android:layout_width="24dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/bt_dev_updata"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_item_dev_updata"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_test"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/test"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

                <View
                    android:layout_width="24dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/bt_camera"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/camera_resolution"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_updata"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_item_version_update"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

                <View
                    android:layout_width="24dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/bt_serialport_set"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Serial_port_setup"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_language"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/pref_setting_customize"
                    android:textColor="@android:color/white"
                    android:visibility="visible"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

                <View
                    android:layout_width="24dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/bt_exit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_item_exit"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@drawable/bt_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:paddingStart="6dp">

                <CheckBox
                    android:id="@+id/cb_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/dialog_item_start" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="56dp"
                android:paddingStart="6dp">

                <CheckBox
                    android:id="@+id/cb_tts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/tts_open" />

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="24dp">

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="16:9 Vertical" />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:text="4:3 Horizontal" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>