<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="#f8f8f8"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/dialog_item_specifications"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_kindna"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/dialog_item_number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/dialog_item_price"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/dialog_item_number"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_box_delete"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/bg_box_delete" />

        <TextView
            android:id="@+id/tv_numble"
            android:layout_width="56dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="0"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_box_add"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/bg_box_add" />

    </LinearLayout>

</android.support.v7.widget.CardView>